# bot_apartaments_booking

./: .env  .env.example  .gitignore  Dockerfile  Dockerfile.bot  Dockerfile.web  Makefile  README.md  docker-compose.yml  pyproject.toml  test.py
alembic/: env.py
alembic/versions/: 0d18fcdc7920_create_table.py  2e226ef45662_update_lasst_name_nullable_true.py  3131e569a55d_add_colums_is_banned.py  33f4b19744a3_add_column_is_superuser_table_users.py  3f111f7c5df3_update_table_users.py  426cb90ad180_create_table.py  76532b9b8bb7_add_table_citys.py  786bb04e90f8_create_table.py  7a454bdc600f_add_email_table_users.py  83e2d38b58e0_update_table_booking_add_column_is_.py  8879c036583f_create_table.py  abe9063fb6b0_create_table.py  bd1539a65a99_add_count_clicks_phone_table_landlords.py  be90746a806a_update_table_booking.py  c4bc10e185bb_create_table.py  de0d3e5066fd_create_table.py  f1a7c11a368c_create_table.py
nginx/: nginx.conf
scripts/: create_superuser.py
src/: __main__.py  main_bot.py  main_fastapi.py  run_fastapi.py  setup_logging.py
src/apmin_panel/: conf_static.py
src/apmin_panel/api/: auth_helpers.py  depandencies.py  register_router.py
src/core/: config.py  db_helper.py
src/core/models/: __init__.py  apartaments.py  apartment_photos.py  bookings.py  citys.py  (+2 more)
src/templates/: auth.html  base.html  bookings.html  navbar.html
src/tgbot/: __init__.py  bot.py  scheduler_init.py
tests/: conftest.py  test_basic_commands.py  test_one.py
tests/admin_panel/: conftest.py  test_01_auth.py
tests/bot/: conftest.py  test_basic_commands.py
tests/tests_api/: test_01_auth.py  test_02_users.py  test_03_landlord.py  test_04_bookings.py  test_05_statistics.py  test_06_handlord_statistics.py
tests/tests_app/: test_users.py
(+92 files in other folders)
