[tool.poetry]
name = "bot-apartaments-booking"
version = "0.1.0"
description = ""
authors = ["Koresh06 <korets-24@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.13.0"
sqlalchemy = "^2.0.35"
aiogram-dialog = "^2.2.0"
alembic = "^1.13.2"
environs = "^11.0.0"
uvicorn = "^0.30.6"
python-multipart = "^0.0.9"
fastapi = "^0.114.2"
asyncpg = "^0.29.0"
python-jose = "^3.3.0"
passlib = "^1.7.4"
aioredis = "^2.0.1"
redis = "^5.0.8"
babel = "^2.16.0"
ruff = "^0.6.8"
tree = "^0.2.4"
apscheduler = "^3.10.4"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
pandas = "^2.2.3"
itsdangerous = "^2.2.0"
betterlogging = "^1.0.0"
beautifulsoup4 = "^4.12.3"
loguru = "^0.7.2"
pydantic = {extras = ["email"], version = "^2.9.2"}


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
httpx = "^0.27.2"
pytest-mock = "^3.14.0"
sqlalchemy-utils = "^0.41.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [".", "src",]
asyncio_mode = "auto"


